build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "rsgislib"
version = "5.0.11"
description = "Python bindings for rsgislib"
license = {text = "GNU General Public License Version 3"}
dependencies = [
    "gdal>2,<4",
    "tqdm",
    "pymcr",
    "rios",
    "numpy",
    "pysptools"
]
